// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard "
    position={2}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          Active time
        </label>
        <div
          className="flex"
          style={
            Object {
              "marginTop": 12,
              "textAlign": "center",
            }
          }
        >
          <div
            className="flex-main text-right text-muted"
            style={
              Object {
                "fontSize": 12,
                "paddingRight": 8,
                "paddingTop": 23,
              }
            }
          >
            Low
          </div>
          <div
            className="flex-sub"
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <svg
              fill="none"
              height="85"
              style={
                Object {
                  "fill": "none",
                }
              }
              viewBox="19 19 101 88"
              width="98"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M101.459 101.459C119.033 83.8858 119.033 55.3934 101.459 37.8198C83.8859 20.2462 55.3934 20.2462 37.8198 37.8198C20.2463 55.3934 20.2463 83.8858 37.8198 101.459"
                stroke="#f8b700"
                strokeLinecap="round"
                strokeWidth="8"
              />
              <path
                clipRule="evenodd"
                d="M68.6396 28.6396H70.6396V32.6396H68.6396V28.6396Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M87.7656 32.8389L89.5485 33.7451L87.7368 37.3097L85.9539 36.4035L87.7656 32.8389Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M101.207 50.1829L100.077 48.5324L103.378 46.2732L104.508 47.9236L101.207 50.1829Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M106.622 67.3762L106.417 65.3868L110.398 64.9765L110.603 66.966L106.622 67.3762Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M103.658 84.4276L104.376 82.5609L108.11 83.9969L107.392 85.8635L103.658 84.4276Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M52.0547 32.5298L50.2627 33.4179L52.039 37.0019L53.831 36.1137L52.0547 32.5298Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M36.1157 45.9784L34.965 47.6142L38.2354 49.9147L39.3861 48.2789L36.1157 45.9784Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M28.8926 64.968L28.6883 66.9576L32.6626 67.3657L32.8669 65.3761L28.8926 64.968Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
              <path
                clipRule="evenodd"
                d="M31.3486 84.3921L32.0806 86.2533L35.8031 84.7895L35.0711 82.9282L31.3486 84.3921Z"
                fill="#f8b700"
                fillRule="evenodd"
              />
            </svg>
            <div
              style={
                Object {
                  "height": 32,
                  "left": "50%",
                  "marginTop": -13,
                  "position": "absolute",
                  "top": 49,
                  "transform": "translate(-50%, -50%)",
                  "width": 32,
                }
              }
            >
              <svg
                fill="none"
                height="32"
                style={
                  Object {
                    "fill": "none",
                    "margin": 0,
                    "transform": "rotate(109.64619195743154deg)",
                    "transformOrigin": "5px 27px",
                  }
                }
                viewBox="0 0 10 32"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 27C9 29.2091 7.20914 31 5 31C2.79086 31 1 29.2091 1 27C1 24.7909 2.79086 23 5 23C7.20914 23 9 24.7909 9 27Z"
                  stroke="#f8b700"
                  strokeWidth="2"
                />
                <path
                  clipRule="evenodd"
                  d="M6 0L6 23H4L4 0L6 0Z"
                  fill="#f8b700"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            <div
              className="value"
              style={
                Object {
                  "fontSize": "1.25em",
                  "marginTop": -18,
                }
              }
            >
              89
              %
            </div>
          </div>
          <div
            className="flex-main text-left text-muted"
            style={
              Object {
                "fontSize": 12,
                "paddingLeft": 8,
                "paddingTop": 23,
              }
            }
          >
            High
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={4}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Backdraft"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
            Backdraft
          </a>
        </label>
        <div
          className="value"
        >
          2
           
          <small>
            Wasted procs
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={1003}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=152108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Cataclysm"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=152108"
            rel="noopener noreferrer"
            target="_blank"
          >
            Cataclysm
          </a>
        </label>
        <div
          className="value"
        >
          1,154
           DPS 
          <small>
            5.87
             % of total
          </small>
           
          <br />
          1.43
           
          <small>
            average targets hit
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    category="ITEMS"
    className="panel statistic small "
    position={1001}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=277644"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Crashing Chaos"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_chaosbolt.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=277644"
            rel="noopener noreferrer"
            target="_blank"
          >
            Crashing Chaos
          </a>
        </label>
        <div
          className="value"
        >
          1,367
           DPS 
          <small>
            6.95
             % of total
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={1001}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Flashover"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            Flashover
          </a>
        </label>
        <div
          className="value"
        >
          395
           DPS 
          <small>
            2.01
             % of total
          </small>
           
          <br />
          26
           
          <small>
            bonus Backdraft stacks
          </small>
           
          <br />
          0
          <small
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "marginLeft": 7,
              }
            }
          >
            wasted Backdraft stacks 
            <sup>
              *
            </sup>
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic flexible "
    position={1004}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=266086"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Grimoire of Supremacy"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/warlock_grimoireofcommand.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=266086"
            rel="noopener noreferrer"
            target="_blank"
          >
            Grimoire of Supremacy
          </a>
        </label>
        <div
          className="value"
        >
          2,633
           DPS 
          <small>
            13.39
             % of total
          </small>
           
          <br />
          15.00
           
          <small>
            average stacks
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={5}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=80240"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Havoc"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=80240"
            rel="noopener noreferrer"
            target="_blank"
          >
            Havoc
          </a>
        </label>
        <div
          className="value"
        >
          78
           DPS 
          <small>
            0.40
             % of total
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the statistic snapshot 1`] = `
<div
  className="col-md-6 col-sm-12 col-xs-12"
>
  <div
    className="panel statistic bar"
    position={1}
  >
    <div
      className="panel-body"
    >
      <div
        className="flex"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=348"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Immolate"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
            />
          </a>
        </div>
        <div
          className="flex-sub value"
        >
          99
           % 
          <small>
            uptime
          </small>
        </div>
        <div
          className="flex-main chart"
          style={
            Object {
              "padding": 15,
            }
          }
        >
          <div
            className="uptime-bar"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "left": "0.7228444618207506%",
                  "width": "99.25360866880217%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the statistic snapshot 1`] = `null`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={1002}
  >
    <div
      className="panel-body"
    >
      <div
        className="pad boring-text "
      >
        <label>
          <a
            href="http://wowhead.com/spell=205148"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Reverse Entropy"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraftgreen.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=205148"
            rel="noopener noreferrer"
            target="_blank"
          >
            Reverse Entropy
          </a>
        </label>
        <div
          className="value"
        >
          <svg
            className="icon"
            viewBox="10 10 80 80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M50,86.4865c17.4361,0,31.6216-14.1855,31.6216-31.6216c0-16.6168-12.8865-30.2714-29.1892-31.5189v-4.9677h7.2973v-4.8649  H40.2703v4.8649h7.2973v4.9677c-16.3027,1.2475-29.1892,14.902-29.1892,31.5189C18.3784,72.3009,32.5639,86.4865,50,86.4865z M52.4324,28.2236c3.1101,0.2817,6.0664,1.0982,8.7798,2.356l-8.7798,15.2073V28.2236z M47.5676,28.2236v26.6412 c0,1.1008,0.7393,2.0647,1.8029,2.3497c0.209,0.0561,0.4205,0.0827,0.6295,0.0827c0.8533,0,1.6642-0.4504,2.1065-1.2162 l13.3146-23.0616c6.8507,4.8503,11.3357,12.8315,11.3357,21.8454c0,14.7537-12.0031,26.7567-26.7568,26.7567 s-26.7568-12.003-26.7568-26.7567C23.2432,40.9315,33.9501,29.4573,47.5676,28.2236z"
            />
          </svg>
           
          43
           % 
          <small>
            uptime
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic small "
    position={3}
  >
    <div
      className="panel-body"
    >
      <div
        className="flex boring-value grayscale"
      >
        <div
          className="flex-sub icon"
        >
          <a
            href="http://wowhead.com/spell=246985"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Soul Shards"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/inv_misc_gem_amethyst_02.jpg"
            />
          </a>
        </div>
        <div
          className="flex-main value"
        >
          <div>
            2
          </div>
          <small>
            Wasted Soul Shard Fragments
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your core spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Destruction Warlocks have a simple rotation core. Maintain your 
            <a
              href="http://wowhead.com/spell=348"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
              />
               
              Immolate
            </a>
             on all enemies if possible, don't waste your 
            <a
              href="http://wowhead.com/spell=17962"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
              />
               
              Conflagrate
            </a>
             and 
            <a
              href="http://wowhead.com/spell=117828"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
              />
               
              Backdraft
            </a>
             stacks. Use 
            <a
              href="http://wowhead.com/spell=80240"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
              />
               
              Havoc
            </a>
             whenever there's something else to cleave.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=348"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
                  />
                   
                  Immolate
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  99.25%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=17962"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                  />
                   
                  Conflagrate
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  102.31%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted 
                <a
                  href="http://wowhead.com/spell=117828"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
                  />
                   
                  Backdraft
                </a>
                 stacks per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Don't cap your Soul Shard Fragments
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Soul Shards are your most important resource and since you are in control of their generation, it's very important to plan your rotation and not let them cap.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted fragments per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                  <dfn
                    className=""
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    style={Object {}}
                  >
                     
                    1
                     
                     
                  </dfn>
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns and talents
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Be mindful of your talent choices and use them when it's appropriate. It's okay to hold on a cooldown for a little bit when the encounter requires it (burn phases or priority targets), but generally speaking you should use them as much as you can.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=152108"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
                  />
                   
                  Cataclysm
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=1122"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_summoninfernal.jpg"
                  />
                   
                  Summon Infernal
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=113858"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_soulburn.jpg"
                  />
                   
                  Dark Soul: Instability
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Use your utility and defensive spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Use other spells in your toolkit to your advantage. For example, you can try to minimize necessary movement by using 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Demonic Gateway
            </a>
            , 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Demonic Circle
            </a>
            , 
            <a
              href="http://wowhead.com/spell=111400"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_sealarmorbreachtga.jpg"
              />
               
              Burning Rush
            </a>
             or mitigate incoming damage with 
            <a
              href="http://wowhead.com/spell=104773"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
              />
               
              Unending Resolve
            </a>
            /
            <a
              href="http://wowhead.com/spell=108416"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/warlock_sacrificial_pact.jpg"
              />
               
              Dark Pact
            </a>
            .
            <br />
            While you shouldn't cast these defensives on cooldown, be aware of them and use them whenever effective. Not using them at all indicates you might not be aware of them or not using them optimally.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48020"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccircleteleport.jpg"
                  />
                   
                  Demonic Circle Teleport
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=104773"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                  />
                   
                  Unending Resolve
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Always be casting
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should try to avoid doing nothing during the fight. When you have to move, try to save some 
            <a
              href="http://wowhead.com/spell=17962"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
              />
               
              Conflagrate
            </a>
             charges or try to utilize 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Teleport
            </a>
             or 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Gateway
            </a>
             to reduce the movement even further.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  10.84%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex wrapable"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ffc84a",
                  "width": "59.25925925925925%",
                }
              }
            />
          </div>
        </div>
        <div
          className="flex-sub chevron"
        >
          <div>
            <svg
              className="icon"
              viewBox="0 0 16 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#df7102",
                        "transition": "background-color 800ms",
                        "width": "33.33333333333333%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a high quality pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
